--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Warna Dasar -->
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="blue">#2196F3</color>
+    <color name="red">#C33434</color>
+    <!-- Warna dari Figma -->
+    <color name="text_black">#160809</color>
+    <color name="primary">#70292E</color>
+    <color name="secondary">#D6D68F</color>
+    <color name="accent">#7EAB3F</color>
 </resources>
