--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -30,7 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:fontFamily="@font/poppins_bold"
-            android:text="@string/sign_in"
+            android:text="@string/signin_big"
             android:textColor="@color/text_black"
             android:textSize="20sp" />
 
