--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="red">#C33434</color>
     <!-- Warna dari Figma -->
     <color name="text_black">#160809</color>
+    <color name="background">#FCF8F9</color>
     <color name="primary">#70292E</color>
     <color name="secondary">#D6D68F</color>
     <color name="accent">#7EAB3F</color>
