--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -71,13 +71,25 @@
                     android:progressDrawable="@drawable/progresscircle" />
 
                 <TextView
-                    android:id="@+id/textProgress"
+                    android:id="@+id/textProgress1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:text="@string/angkautama"
-                    android:textSize="20sp"
+                    android:fontFamily="@font/poppins_light"
+                    android:textSize="18sp"
                     android:textColor="@android:color/black" />
+
+                <TextView
+                    android:id="@+id/calorie2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/circularProgressBar"
+                    android:text="Calorie"
+                    android:fontFamily="@font/poppins_bold"
+                    android:layout_centerHorizontal="true"
+                    android:textColor="@android:color/black"
+                    android:textSize="15sp" />
             </RelativeLayout>
 
             <LinearLayout
@@ -99,7 +111,7 @@
                         android:layout_marginTop="10dp"
                         android:indeterminate="false"
                         android:max="100"
-                        android:progress="50"
+                        android:progress="20"
                         android:progressDrawable="@drawable/progresscircle" />
                     <!-- Text di Tengah -->
 
@@ -109,7 +121,8 @@
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
                         android:text="@string/angkaprotein"
-                        android:textSize="15sp"
+                        android:fontFamily="@font/poppins_light"
+                        android:textSize="12sp"
                         android:textColor="@android:color/black" />
 
                     <TextView
@@ -118,7 +131,7 @@
                         android:layout_height="wrap_content"
                         android:layout_below="@id/progressprotein"
                         android:text="@string/protein"
-                        android:textStyle="bold"
+                        android:fontFamily="@font/poppins_bold"
                         android:layout_centerHorizontal="true"
                         android:textColor="@android:color/black"
                         android:textSize="15sp" />
@@ -146,7 +159,8 @@
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
                         android:text="@string/angkaprotein"
-                        android:textSize="15sp"
+                        android:fontFamily="@font/poppins_light"
+                        android:textSize="12sp"
                         android:textColor="@android:color/black" />
 
                     <TextView
@@ -155,7 +169,7 @@
                         android:layout_height="wrap_content"
                         android:layout_below="@id/progressfat"
                         android:text="@string/fat"
-                        android:textStyle="bold"
+                        android:fontFamily="@font/poppins_bold"
                         android:layout_centerHorizontal="true"
                         android:textColor="@android:color/black"
                         android:textSize="15sp" />
@@ -183,7 +197,8 @@
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
                         android:text="@string/angkaprotein"
-                        android:textSize="15sp"
+                        android:fontFamily="@font/poppins_light"
+                        android:textSize="12sp"
                         android:textColor="@android:color/black" />
                     <TextView
                         android:id="@+id/carbs"
@@ -191,7 +206,7 @@
                         android:layout_height="wrap_content"
                         android:layout_below="@id/progresscarbs"
                         android:text="@string/carbs"
-                        android:textStyle="bold"
+                        android:fontFamily="@font/poppins_bold"
                         android:layout_centerHorizontal="true"
                         android:textColor="@android:color/black"
                         android:textSize="15sp" />
@@ -220,8 +235,9 @@
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
                         android:text="@string/angkaprotein"
+                        android:fontFamily="@font/poppins_light"
                         android:gravity="center"
-                        android:textSize="15sp"
+                        android:textSize="12sp"
                         android:textColor="@android:color/black" />
                     <TextView
                         android:id="@+id/fiber"
@@ -229,7 +245,7 @@
                         android:layout_height="wrap_content"
                         android:layout_below="@id/progressfiber"
                         android:text="@string/fiber"
-                        android:textStyle="bold"
+                        android:fontFamily="@font/poppins_bold"
                         android:layout_centerHorizontal="true"
                         android:textColor="@android:color/black"
                         android:textSize="15sp" />
@@ -251,6 +267,7 @@
                     android:drawableLeft="@drawable/ic_calender"
                     android:drawableTint="@android:color/white"
                     android:text="@string/today"
+                    android:fontFamily="@font/poppins_bold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -285,6 +302,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/weight"
+                    android:fontFamily="@font/poppins"
                     android:textSize="16sp"
                     android:textColor="@android:color/black"
                     android:padding="8dp" />
@@ -318,6 +336,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/height"
+                    android:fontFamily="@font/poppins"
                     android:textSize="16sp"
                     android:textColor="@android:color/black"
                     android:padding="8dp" />
@@ -394,8 +413,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="12dp"
                     android:text="@string/addfood"
-                    android:textSize="20sp"
-                    android:textStyle="bold"
+                    android:textColor="@android:color/black"
+                    android:textSize="18sp"
+                    android:fontFamily="@font/poppins_medium"
                     app:layout_constraintBottom_toBottomOf="@id/yourmeals"
                     app:layout_constraintStart_toEndOf="@id/yourmeals"
                     app:layout_constraintTop_toTopOf="@id/yourmeals"
@@ -411,7 +431,7 @@
                     app:layout_constraintBottom_toBottomOf="@id/yourmeals"
                     app:layout_constraintStart_toEndOf="@id/yourmeals"
                     app:layout_constraintTop_toTopOf="@id/yourmeals"
-                    app:layout_constraintVertical_bias="0.666"
+                    android:fontFamily="@font/poppins_light"
                     tools:ignore="MissingConstraints" />
             </LinearLayout>
 
