--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="primary">#70292E</color>
     <color name="secondary">#D6D68F</color>
     <color name="accent">#7EAB3F</color>
+    <color name="background_white">#FCF8F9</color>
 </resources>
