update string total calorie dll

--- a/app/src/main/res/layout/activity_add_food.xml
+++ b/app/src/main/res/layout/activity_add_food.xml
@@ -124,7 +124,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="0.6"
-                        android:text="93 / 500 cal"
+                        android:text="@string/total_calories_qty"
                         android:textSize="15sp"
                         android:textColor="@color/text_black"
                         android:fontFamily="@font/poppins_medium"
@@ -166,7 +166,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="0.6"
-                        android:text="20 / 36 g"
+                        android:text="@string/carbs_qty"
                         android:textSize="15sp"
                         android:textColor="@color/text_black"
                         android:fontFamily="@font/poppins_medium"
@@ -208,7 +208,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="0.6"
-                        android:text="1 / 30 g"
+                        android:text="@string/protein_qty"
                         android:textSize="15sp"
                         android:textColor="@color/text_black"
                         android:fontFamily="@font/poppins_medium"
@@ -251,7 +251,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="0.6"
-                        android:text="1 / 24 g"
+                        android:text="@string/fat_qty"
                         android:textSize="15sp"
                         android:textColor="@color/text_black"
                         android:fontFamily="@font/poppins_medium"
