--- a/app/src/main/res/layout/activity_search_food.xml
+++ b/app/src/main/res/layout/activity_search_food.xml
@@ -40,7 +40,7 @@
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_marginTop="16dp"
-        android:layout_marginStart="37dp"
+        android:layout_marginStart="20dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/text_input_rounded_corner"
         android:fontFamily="@font/poppins"
@@ -63,7 +63,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="16dp"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="37dp"
+        android:layout_marginEnd="20dp"
         android:text="@string/searchfood"
         android:backgroundTint="@color/accent"
         android:textColor="@android:color/white"
@@ -76,8 +76,7 @@
         android:id="@+id/foodRecyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="37dp"
-        android:layout_marginEnd="37dp"
+        android:layout_marginHorizontal="10dp"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@+id/searchButton"
         app:layout_constraintBottom_toBottomOf="parent"
