--- a/app/src/main/res/layout/recyclerview.xml
+++ b/app/src/main/res/layout/recyclerview.xml
@@ -6,9 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:layout_marginStart="8dp"
     android:layout_marginTop="4dp"
-    android:layout_marginEnd="8dp"
     android:layout_marginBottom="4dp"
     app:cardCornerRadius="4dp"
     app:cardBackgroundColor="@color/background_white">
@@ -16,17 +14,16 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="4dp"
+        android:paddingVertical="8dp"
+        android:paddingHorizontal="10dp"
         android:paddingBottom="0dp">
 
         <TextView
             android:id="@+id/food"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
             android:gravity="center_vertical"
-            android:textSize="24sp"
+            android:textSize="20sp"
             android:textStyle="bold"
             android:textColor="@color/text_black"
             tools:text="Banana"
@@ -39,10 +36,8 @@
             android:id="@+id/food_desc"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
             android:gravity="center_vertical"
-            android:textSize="18sp"
+            android:textSize="12sp"
             android:textColor="@color/text_black"
             tools:text="93 Cal, 1 banana (100 g)"
             app:layout_constraintBottom_toBottomOf="parent"
