--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -122,6 +122,48 @@
             android:layout_height="1dp"
             android:background="@android:color/darker_gray"/>
 
+        <!-- Birth Date -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="end"
+            android:layout_marginVertical="16dp" >
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight=".30"
+                android:paddingEnd="5dp"
+                android:text="@string/age"
+                android:layout_gravity="center"
+                android:fontFamily="@font/poppins_bold"
+                android:textSize="16sp" />
+
+            <EditText
+                android:id="@+id/age_edit"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight=".70"
+                android:background="@drawable/text_input_rounded_corner"
+                android:fontFamily="@font/poppins"
+                android:hint="@string/age"
+                android:inputType="number"
+                android:minWidth="48dp"
+                android:minHeight="48dp"
+                android:paddingHorizontal="20dp"
+                android:paddingVertical="12dp"
+                android:textColor="@color/text_black"
+                android:textColorHint="@color/text_black"
+                android:textSize="12sp" />
+
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@android:color/darker_gray"/>
+
         <!-- Start Weight -->
         <LinearLayout
             android:layout_width="match_parent"
@@ -135,13 +177,13 @@
                 android:layout_height="wrap_content"
                 android:layout_weight=".30"
                 android:paddingEnd="5dp"
-                android:text="@string/start_weight"
+                android:text="@string/weight_kg"
                 android:layout_gravity="center"
                 android:fontFamily="@font/poppins_bold"
-                android:textSize="16sp" />
+                android:textSize="15sp" />
 
             <EditText
-                android:id="@+id/start_weight_edit"
+                android:id="@+id/weight_edit"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight=".70"
@@ -177,13 +219,13 @@
                 android:layout_height="wrap_content"
                 android:layout_weight=".30"
                 android:paddingEnd="5dp"
-                android:text="@string/start_height"
+                android:text="@string/height_cm"
                 android:layout_gravity="center"
                 android:fontFamily="@font/poppins_bold"
-                android:textSize="16sp" />
+                android:textSize="15sp" />
 
             <EditText
-                android:id="@+id/start_height_edit"
+                android:id="@+id/height_edit"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight=".70"
@@ -206,49 +248,7 @@
             android:layout_height="1dp"
             android:background="@android:color/darker_gray"/>
 
-        <!-- Birth Date -->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="end"
-            android:layout_marginVertical="16dp" >
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight=".30"
-                android:paddingEnd="5dp"
-                android:text="@string/birthdate"
-                android:layout_gravity="center"
-                android:fontFamily="@font/poppins_bold"
-                android:textSize="16sp" />
-
-            <EditText
-                android:id="@+id/birthdate_edit"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight=".70"
-                android:background="@drawable/text_input_rounded_corner"
-                android:fontFamily="@font/poppins"
-                android:hint="@string/birthdate"
-                android:inputType="date"
-                android:minWidth="48dp"
-                android:minHeight="48dp"
-                android:paddingHorizontal="20dp"
-                android:paddingVertical="12dp"
-                android:textColor="@color/text_black"
-                android:textColorHint="@color/text_black"
-                android:textSize="12sp" />
-
-        </LinearLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@android:color/darker_gray"/>
-
-        <!-- Birth Date -->
+        <!-- Gender -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -315,14 +315,14 @@
             android:background="@android:color/darker_gray"/>
 
         <Button
-            android:id="@+id/submit_changes_button"
+            android:id="@+id/save_changes_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:backgroundTint="@color/accent"
             android:fontFamily="@font/poppins_bold"
             android:padding="10dp"
-            android:text="@string/finish"
+            android:text="@string/save_changes"
             android:textColor="@color/white"
             android:textSize="14sp" />
 
