--- a/app/src/main/res/layout/recyclerview.xml
+++ b/app/src/main/res/layout/recyclerview.xml
@@ -39,7 +39,7 @@
             android:gravity="center_vertical"
             android:textSize="12sp"
             android:textColor="@color/text_black"
-            tools:text="93 Cal, 1 banana (100 g)"
+            tools:text="93 Cals / 100 g"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
